# Harware_Interface

./: .gitignore  .gitmodules  README.md  hw_interface.doxy
bash_scripts/: start_agent.sh  start_operator.sh
camera_capture/: CMakeLists.txt  package.xml
camera_capture/include/camera_capture/: camera_sender_node.hpp
camera_capture/src/: camera_receiver_node.cpp  camera_sender_node.cpp
hw_interface/: CMakeLists.txt
hw_interface/include/hw_interface/: base_UDP_interface.hpp  base_interface.hpp  base_serial_interface.hpp  shared_const_buffer.hpp
hw_interface/launch/: hw_interface_agent_only.launch  hw_interface_drive_only.launch  hw_interface_local_op.launch  hw_interface_operator_only.launch  hw_interface_plugins.launch  hw_interface_plugins_agent_only.launch  hw_interface_plugins_drive_only.launch  hw_interface_plugins_local_op.launch  hw_interface_plugins_operator_only.launch
hw_interface/src/: base_UDP_interface.cpp  base_interface.cpp  base_serial_interface.cpp
hw_interface_plugins/: CMakeLists.txt
hw_interface_plugins/hw_interface_plugin_agent/: CMakeLists.txt  agent_plugins.xml  package.xml
hw_interface_plugins/hw_interface_plugin_agent/launch/: Agent_Interface.launch
hw_interface_plugins/hw_interface_plugin_agent/msg/: LOS.msg
hw_interface_plugins/hw_interface_plugin_agent/src/: hw_interface_plugin_agent_UDP.cpp
hw_interface_plugins/hw_interface_plugin_dynamixel/: CMakeLists.txt  dynamixel_plugin.xml  package.xml
hw_interface_plugins/hw_interface_plugin_dynamixel/launch/: Dynamixel_Serial.launch
hw_interface_plugins/hw_interface_plugin_dynamixel/msg/: groupServoUpdate.msg  servoStateResponse.msg  servoUpdate.msg
hw_interface_plugins/hw_interface_plugin_dynamixel/scripts/: .install-device-rules-dynamixel.sh.swp  install-device-rules-dynamixel.sh
hw_interface_plugins/hw_interface_plugin_dynamixel/src/: dynamixel_factory.cpp  dynamixel_servo.cpp  dynamixel_servo_group.cpp  hw_interface_plugin_dynamixel_serial.cpp  talker.cpp
hw_interface_plugins/hw_interface_plugin_example/: CMakeLists.txt  example_plugin.xml  package.xml
hw_interface_plugins/hw_interface_plugin_example/launch/: Example_Serial_Interface.launch
hw_interface_plugins/hw_interface_plugin_example/src/: hw_interface_plugin_example_serial.cpp
hw_interface_plugins/hw_interface_plugin_netburner/: CMakeLists.txt  package.xml
hw_interface_plugins/hw_interface_plugin_netburner/msg/: IMUUpdate.msg
hw_interface_plugins/hw_interface_plugin_netburner/src/: hw_interface_plugin_netburner_UDP.cpp
hw_interface_plugins/hw_interface_plugin_old_roboteq/: CMakeLists.txt  old_roboteq_plugins.xml  package.xml
hw_interface_plugins/hw_interface_plugin_old_roboteq/launch/: Left_Roboteq_Interface.launch  Right_Roboteq_Interface.launch
hw_interface_plugins/hw_interface_plugin_operator/: CMakeLists.txt  operator_plugins.xml  package.xml
hw_interface_plugins/hw_interface_plugin_roboteq/: CMakeLists.txt  COMP_L_Drive_CL_Script.txt  COMP_R_Drive_CL_Script.txt  REG_L_Drive_CL_Script.txt  REG_R_Drive_CL_Script.txt  left-drive-closed-loop-script.txt  package.xml  right-drive-closed-loop-script.txt  roboteq_plugins.xml
hw_interface_plugins/hw_interface_plugin_teensy/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml  teensy_plugin.xml
hw_interface_plugins/hw_interface_plugin_timedomain/: CMakeLists.txt  package.xml  timedomain_plugin.xml
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/launch/: Keyboard_Control.launch
keyboard_control/src/: keyboard_control_node.cpp
messages/: CMakeLists.txt
messages/msg/: ActuatorOut.msg  MissionPlanningInfo.msg  NavFilterOut.msg  PowerUsage.msg  SimControl.msg  encoderUpdate.msg  encoder_data.msg  nb1_to_i7_msg.msg
messages/srv/: ExecAction.srv  ExecManualOverride.srv  MissionPlanningControl.srv
navigation/: CMakeLists.txt
navigation/include/navigation/: encoders_class.hpp  (+3 more)
navigation/src/: encoders_class.cpp  filter_class.cpp  imu_class.cpp  navigation_filter.cpp  navigation_filter_node.cpp
power_usage/: CMakeLists.txt  package.xml
power_usage/src/: power_usage_node.cpp
robot_control/: CMakeLists.txt  package.xml
robot_control/include/robot_control/: action.h  action_params.h  action_type_enum.h  actuator_deque_interface.h  arm_halt.h  arm_lower_to_pitch.h  arm_set_pos.h  arm_shake.h  bit_utils.h  bucket_halt.h  bucket_set_pos.h  bucket_shake.h  close_to_wall.h  deposit.h  deposit_realign.h  dig.h  drive_global.h  drive_pivot.h  drive_power_dig.h  drive_relative.h  drive_straight.h  drive_to_deposit.h  drive_to_dig.h  drive_to_wall.h  drive_until_limit.h  dump.h  exec.h  flip_back.h  initialize.h  irl_grid_map.hpp  lower_bucket.h  mine.h  mission_planning.h  mission_planning_procedure_share.h  mission_planning_types_defines.h  partially_raise_arm.h  partially_raise_bucket.h  planning_map_struct.hpp  prepare_arm_bucket.h  procedure.h  (+10 more)
robot_control/msg/: Waypoint.msg
robot_control/src/: action.cpp  arm_halt.cpp  arm_lower_to_pitch.cpp  arm_set_pos.cpp  arm_shake.cpp  bucket_halt.cpp  bucket_set_pos.cpp  bucket_shake.cpp  close_to_wall.cpp  deposit.cpp  deposit_realign.cpp  dig.cpp  drive_global.cpp  drive_halt.cpp  drive_pivot.cpp  drive_power_dig.cpp  drive_relative.cpp  drive_straight.cpp  drive_to_deposit.cpp  drive_to_dig.cpp  drive_to_wall.cpp  drive_until_limit.cpp  dump.cpp  exec.cpp  flip_back.cpp  idle.cpp  initialize.cpp  lower_bucket.cpp  mine.cpp  mission_planning.cpp  partially_raise_arm.cpp  partially_raise_bucket.cpp  prepare_arm_bucket.cpp  raise_arm.cpp  raise_bucket.cpp  recover.cpp  scoop_halt.cpp  scoop_set_pos.cpp  shake.cpp  wait.cpp
simulation/: CMakeLists.txt  package.xml
simulation/src/: RobotSim.cpp  simulation_node.cpp
td_navigation/: CMakeLists.txt  package.xml
td_navigation/launch/: td_navigation.launch
td_navigation/msg/: Average_angle.msg  Td_navigation_Status  Td_navigation_Status.msg
td_navigation/src/: td_navigation.cpp
td_navigation/srv/: Localize.srv
tele_op_control/: CMakeLists.txt  package.xml
tele_op_control/src/: tele_op_control.cpp  tele_op_control_node.cpp
(+78 files in other folders)
